# GST_SAHAYAK

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  prd_1.md  pyproject.toml  requirements.txt  server.py  validation.py
agent/: __init__.py  baseline_agent.py  rl_agent.py
data/: generate_splits.py  loader.py  manifest.json
data/semantic/: gst_rules.json
data/synthetic/: generator.py  hsn_table.json
data/test/1/: episode_0000.json  episode_0001.json  episode_0002.json  episode_0003.json  episode_0004.json  episode_0005.json  episode_0006.json  episode_0007.json  episode_0008.json  episode_0009.json  episode_0010.json  episode_0011.json  episode_0012.json  episode_0013.json  episode_0014.json  episode_0015.json  episode_0016.json  episode_0017.json  episode_0018.json  episode_0019.json  episode_0020.json  episode_0021.json  episode_0022.json  episode_0023.json  episode_0024.json  episode_0025.json  episode_0026.json  episode_0027.json  episode_0028.json  episode_0029.json  episode_0030.json  episode_0031.json  episode_0032.json  episode_0033.json
data/test/2/: episode_0034.json  episode_0035.json  episode_0036.json  episode_0037.json  episode_0038.json  episode_0039.json  episode_0040.json  episode_0041.json  episode_0042.json  episode_0043.json  episode_0044.json  episode_0045.json  episode_0046.json  episode_0047.json  episode_0048.json  episode_0049.json  episode_0050.json  episode_0051.json  episode_0052.json  episode_0053.json  episode_0054.json  episode_0055.json  episode_0056.json  episode_0057.json  episode_0058.json  episode_0059.json  episode_0060.json  episode_0061.json  episode_0062.json  episode_0063.json  episode_0064.json  episode_0065.json  episode_0066.json
data/test/3/: episode_0067.json  episode_0068.json  episode_0069.json  episode_0070.json  episode_0071.json  episode_0072.json  episode_0073.json  episode_0074.json  episode_0075.json  episode_0076.json  episode_0077.json  episode_0078.json  episode_0079.json  episode_0080.json  episode_0081.json  episode_0082.json  episode_0083.json  episode_0084.json  episode_0085.json  episode_0086.json  episode_0087.json  episode_0088.json  episode_0089.json  episode_0090.json  episode_0091.json  episode_0092.json  episode_0093.json  episode_0094.json  episode_0095.json  episode_0096.json  episode_0097.json  episode_0098.json  episode_0099.json
data/train/1/: episode_0000.json  episode_0003.json  episode_0006.json  episode_0009.json  episode_0012.json  episode_0015.json  episode_0018.json  episode_0021.json  episode_0024.json  episode_0027.json  episode_0030.json  episode_0033.json  episode_0036.json  episode_0039.json  episode_0042.json  (+252 more)
env/: __init__.py  gst_env.py  memory_manager.py  rewards.py
env/graders/: __init__.py  grader_classify.py  grader_filing.py  grader_itc.py
env/tasks/: __init__.py  task1_classify.py  task2_itc.py  task3_filing.py
models/: __init__.py  action.py  observation.py  reward.py
server/: app.py
(+633 files in other folders)
