[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ─────────────────────────────────────────────────────────────────────────────
# Project metadata
# ─────────────────────────────────────────────────────────────────────────────
[project]
name            = "gst-intelligence-rl"
version         = "1.0.0"
description     = "OpenEnv-compliant RL environment for Indian GST compliance automation"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"

keywords = [
    "reinforcement-learning",
    "gst",
    "tax-automation",
    "gymnasium",
    "openenv",
    "india",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core runtime dependencies (mirrors requirements.txt)
dependencies = [
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.2.1",
    "torch>=2.1.0",
    "openai>=1.30.0",
    "pydantic>=2.5.0",
    "faker>=22.0.0",
    "numpy>=1.26.0",
    "rapidfuzz>=3.6.0",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gradio>=4.44.0",
    "pandas>=2.0.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Entry points
# ─────────────────────────────────────────────────────────────────────────────
[project.scripts]
# Run inference from command line: gst-inference --task 1 --seed 42
gst-inference = "inference:main"
# Serve the FastAPI + Gradio app
gst-serve     = "app:main"

# ─────────────────────────────────────────────────────────────────────────────
# Optional extras
# ─────────────────────────────────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0",
    "ruff>=0.4.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Package discovery
# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["env*", "models*", "agent*", "data*"]
exclude = ["__pycache__*", "*.pyc", "checkpoints*", "memory*"]

[tool.setuptools.package-data]
"data"  = ["semantic/*.json", "synthetic/hsn_table.py"]

# ─────────────────────────────────────────────────────────────────────────────
# Tool config
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select  = ["E", "F", "W", "I"]
ignore  = ["E501"]        # long lines acceptable in HTML strings

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
